fix width on mobile screen

--- a/03 - CSS Variables/src/index.scss
+++ b/03 - CSS Variables/src/index.scss
@@ -50,6 +50,7 @@ body {
 
 .label {
   @include center;
+  flex-wrap: wrap;
   gap: 18px;
   font-size: 24px;
   font-weight: 100;
